# technical-commercial-proposal

./: .env  Cargo.toml  Dockerfile  README.md  sqlx-data.json
dkp-values-files/inline/: technical-commercial-proposal.yaml
migrations/: 20250228100001_request_head.down.sql  20250228100001_request_head.up.sql  20250228100002_request_item.down.sql  20250228100002_request_item.up.sql  20250228100003_request_partner.down.sql  20250228100003_request_partner.up.sql  20250228100004_proposal_head.down.sql  20250228100004_proposal_head.up.sql  20250228100005_proposal_item.down.sql  20250228100005_proposal_item.up.sql  20250228100006_status_history.down.sql  20250228100006_status_history.up.sql  20250228100007_organization_question.down.sql  20250228100007_organization_question.up.sql  20250519100001_request_subject_purchased.down.sql  20250519100001_request_subject_purchased.up.sql  20250519100002_partner_subject_purchased.down.sql  20250519100002_partner_subject_purchased.up.sql  20250721100001_alter_proposal_item_percent_fields.down.sql  20250721100001_alter_proposal_item_percent_fields.up.sql  20250723100001_alter_proposal_head_remove_etp_uuid.down.sql  20250723100001_alter_proposal_head_remove_etp_uuid.up.sql  20250805100001_proposal_source.down.sql  20250805100001_proposal_source.up.sql  20250930170901_request_subject_purchased.up.sql  20251001180301_request_subject_purchased.down.sql  20251001180301_request_subject_purchased.up.sql  20251003160400_request_subject_purchased.up.sql
migrations/update_migrations/: new_migrations.sql
src/: main.rs
src/application/: mod.rs
(+86 files in other folders)
